# Symphonia

./: clippy.toml
symphonia/: Cargo.toml
symphonia-bundle-flac/: Cargo.toml
symphonia-bundle-flac/src/: decoder.rs  demuxer.rs  frame.rs  lib.rs  parser.rs  validate.rs
symphonia-bundle-mp3/src/: common.rs  decoder.rs  demuxer.rs  header.rs  lib.rs  synthesis.rs
symphonia-bundle-mp3/src/layer1/: mod.rs
symphonia-bundle-mp3/src/layer2/: mod.rs
symphonia-bundle-mp3/src/layer3/: bitstream.rs  hybrid_synthesis.rs  mod.rs  requantize.rs  stereo.rs
symphonia-check/src/: main.rs
symphonia-codec-aac/: Cargo.toml
symphonia-codec-aac/src/: adts.rs  lib.rs
symphonia-codec-aac/src/aac/: cpe.rs  mod.rs
symphonia-codec-aac/tests/: tests.rs
symphonia-codec-adpcm/src/: codec_ima_qt.rs  codec_ima_wav.rs  codec_ms.rs  lib.rs
symphonia-codec-alac/src/: lib.rs
symphonia-codec-pcm/src/: lib.rs
symphonia-codec-vorbis/src/: codebook.rs  floor.rs  lib.rs  residue.rs  window.rs
symphonia-core/: Cargo.toml
symphonia-core/src/: common.rs  errors.rs  lib.rs  meta.rs  units.rs
symphonia-core/src/codecs/: audio.rs  registry.rs
symphonia-core/src/dsp/: mdct.rs
symphonia-core/src/dsp/fft/: cmsis.rs  mod.rs  no_simd.rs
symphonia-core/src/formats/: mod.rs  probe.rs
symphonia-core/src/io/: bit.rs  buf_reader.rs  impls.rs  media_source_stream.rs  mod.rs  monitor_stream.rs  scoped_stream.rs  utils.rs
symphonia-format-caf/: Cargo.toml
symphonia-format-caf/src/: chunks.rs  demuxer.rs  lib.rs
symphonia-format-isomp4/src/: demuxer.rs  lib.rs  stream.rs
symphonia-format-isomp4/src/atoms/: alac.rs  avcc.rs  co64.rs  ctts.rs  dac3.rs  dec3.rs  (+38 more)
symphonia-format-mkv/: Cargo.toml
symphonia-format-mkv/src/: codecs.rs  demuxer.rs  ebml.rs  lacing.rs  lib.rs  segment.rs  tags.rs
symphonia-format-ogg/: Cargo.toml
symphonia-format-ogg/src/: demuxer.rs  lib.rs  logical.rs  page.rs  physical.rs
symphonia-format-riff/src/: common.rs  lib.rs
symphonia-metadata/: Cargo.toml
symphonia-metadata/src/: ape.rs  id3v1.rs  lib.rs
symphonia-play/: Cargo.toml
symphonia-play/src/: main.rs  ui.rs
symphonia/examples/: basic-interleaved.rs  getting-started.rs
symphonia/src/: lib.rs
(+25 files in other folders)
