[package]
name = "symphonia-core"
description = "Project Symphonia shared structs, traits, and features."
authors = ["Philip Deljanov <philip.deljanov@gmail.com>"]
readme = "README.md"
categories = ["multimedia", "multimedia::audio", "multimedia::encoding"]
keywords = ["audio", "codec", "decoder", "multimedia", "media"]
# Common package metadata located in workspace Cargo.toml.
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[features]
default = ["opt-cmsis-dsp"] # TODO: remove

std = ["embedded-io/std", "embedded-io-adapters/std", "once_cell/std"]
defmt = ["embedded-io/defmt"]

# SIMD support.
opt-simd-sse = ["rustfft/sse"]
opt-simd-avx = ["rustfft/avx"]
opt-simd-neon = ["rustfft/neon"]

# Use dsp hardware support on cortex-m33
opt-cmsis-dsp = ["cmsis_dsp"]

# Enable all SIMD support.
opt-simd = [
    "opt-simd-sse",
    "opt-simd-avx",
    "opt-simd-neon"
]

# Experimental features.
exp-subtitle-codecs = []
exp-video-codecs = []

[dependencies]
async-trait = "0.1.89"
bitflags = "2.4.2"
bytemuck = "1.7"
embedded-io = { version = "0.7.1", features = ["alloc"] }
embedded-io-adapters = "0.7.0"
hashbrown = { workspace = true }

log = "0.4"
num-complex = { version = "0.4", default-features = false, features = ["libm"] }
num-traits = { version = "0.2", default-features = false, features = ["libm"] }
smallvec = "1.13.1"
# Use critical-section feature for no_std support, but when std is enabled uses std::sync
once_cell = { version = "1.21", default-features = false, features = ["critical-section"] }

# TODO
# also hard code to my fork until we can upstream my updates
# hard-code feature for now, if people care can fix later
cmsis_dsp = { git = "https://github.com/tsar-boomba/cmsis_dsp.rs.git", optional = true, features = ["dsp-instructions"] }

[dependencies.rustfft]
version = "6.1.0"
optional = true
default-features = false

[dev-dependencies]
futures-test = "0.3"

[dev-dependencies.rand]
version = "0.9.2"
features = ["small_rng"]
default-features = false

